--- a/Venda-FrontEnd/src/cadastro-cliente.html
+++ b/Venda-FrontEnd/src/cadastro-cliente.html
@@ -37,7 +37,9 @@
 
             <main class="col-md-9 ml-sm-auto col-lg-10 px-md-4 content">
                 <div class="container">
-                    <h1>Cliente</h1>
+                  <h1>
+                    Cliente
+                  </h1>
                     <br/>
                     <form>
                       <div class="form-group input">
