api  cadastro de categoria concluído
front-end tela de cadastro de categoria e lista de categoria concluído.

Ajuste nas classes e refatoração

--- a/Venda-FrontEnd/src/cadastro-cliente.html
+++ b/Venda-FrontEnd/src/cadastro-cliente.html
@@ -19,16 +19,25 @@
             <nav class="col-md-3 col-lg-2 d-md-block sidebar">
                 <div class="sidebar-sticky">
                     <ul class="nav flex-column">
-                       <li class="nav-item">
+                      <li class="nav-item">
                             <a class="nav-link" href="index.html">Home</a>
-                       </li>
-                       <li class="nav-item dropdown">
+                      </li>
+                      <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                           Cliente
                         </a>
                         <ul class="dropdown-menu">
                           <li><a class="dropdown-item" href="cadastro-cliente.html">Novo Cliente</a></li>
                           <li><a class="dropdown-item" href="lista-cliente.html">Lista Cliente</a></li>
+                        </ul>
+                      </li>
+                      <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                          Categoria
+                        </a>
+                        <ul class="dropdown-menu">
+                            <li><a class="dropdown-item" href="categoria.html">Nova Categoria</a></li>
+                            <li><a class="dropdown-item" href="lista-categoria.html">Lista Categoria</a></li>
                         </ul>
                     </li>
                     </ul>
@@ -66,7 +75,7 @@
                         <label for="valorInput">E-mail</label>
                         <input type="text" class="form-control" id="email-input" required>
                       </div>
-                       <div>
+                      <div>
                         <button type="submit" class="btn btn-primary button">Salvar</button>
                       </div>
                     </form>
