--- a/Venda-FrontEnd/src/lista-cliente.html
+++ b/Venda-FrontEnd/src/lista-cliente.html
@@ -30,6 +30,15 @@
                               <li><a class="dropdown-item" href="lista-cliente.html">Lista Cliente</a></li>
                             </ul>
                         </li>
+                        <li class="nav-item dropdown">
+                          <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                            Categoria
+                          </a>
+                          <ul class="dropdown-menu">
+                              <li><a class="dropdown-item" href="categoria.html">Nova Categoria</a></li>
+                              <li><a class="dropdown-item" href="lista-categoria.html">Lista Categoria</a></li>
+                          </ul>
+                      </li>
                     </ul>
                 </div>
             </nav>
