--- a/Venda-FrontEnd/src/lista-categoria.html
+++ b/Venda-FrontEnd/src/lista-categoria.html
@@ -57,6 +57,29 @@
                       </tbody>
                     </table>
                 </div>
+
+                <div class="modal fade" id="edit-modal" tabindex="-1" aria-labelledby="edit-modal-label" aria-hidden="true">
+                  <div class="modal-dialog">
+                    <div class="modal-content">
+                      <div class="modal-header">
+                        <h5 class="modal-title" id="edit-modal-label">Editar Clientes</h5>
+                        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                      </div>
+                      <div class="modal-body">
+                        <form>
+                          <div class="form-group">
+                              <label for="edit-nomeInput">Nome</label>
+                              <input type="text" class="form-control" id="edit-nomeInput" required>
+                          </div>
+                        </form>
+                      </div>
+                      <div class="modal-footer">
+                        <button type="button" class="btn btn-primary" id="saveButton">Salvar</button>
+                        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancelar</button>
+                      </div>
+                    </div>
+                  </div>
+              </div>
             </main>
         </div>
     </div>
